Make com.sun.media.sound.SoftTuning work in tuner module